feat: add phone number config db
